testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_identifier/case1.expect.out
error: expected identifier, found '`'
  ==> case1.cj:14:3:
   | 
14 |     ``
   |      ^ expected identifier
   | 

1 error generated, 1 error printed.
